[gd_scene load_steps=5 format=2]

[ext_resource path="res://public/fonts/soupofjustice.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://game/pve/route.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.18921
margin_bottom = 1.18921
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 487.0
margin_top = 190.0
margin_right = 792.0
margin_bottom = 530.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 305.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "New Game Scene"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 305.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 2 )
text = "Back"
script = ExtResource( 3 )

[node name="world1" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 305.0
margin_bottom = 200.0
text = "World 1"
script = ExtResource( 3 )

[node name="world2" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 250.0
margin_right = 305.0
margin_bottom = 270.0
text = "World 2"
script = ExtResource( 3 )

[node name="world3" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 305.0
margin_bottom = 340.0
text = "World 3"
script = ExtResource( 3 )
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="CenterContainer/VBoxContainer/Button" method="_on_backto_title_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/world1" to="CenterContainer/VBoxContainer/world1" method="_on_world1_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/world2" to="." method="_on_world2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/world3" to="." method="_on_world3_pressed"]
